<resources>
    <string name="English">English</string>
    <string name="Spanish">Spanish</string>
    <string name="app_name">IntenProyect</string>
    <string name="descripcionImagen">an Image</string>
    <string name="textUser">User</string>
    <string name="textContraseña">password</string>
    <string name="loguear">Sign in</string>
    <string name="esMasculino">Male</string>
    <string name="esFemenino">Female</string>
    <string name="incorrecto">User or Password incorrect</string>
    <string name="welcomeSr">Welcome Sr: %s</string>
    <string name="welcomeMiss">Welome Ms: %s</string>
    <string name="hi">Hi: %s</string>
    <string name="atraccion">%s %s</string>
    <string name="back">back</string>
    <string name="moreInfo">more info</string>
    <string name="recuest">Favourite</string>
    <string name="recuestGrats">%s added to favourites</string>
    <string name="Settings">Settings</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="apply">Apply</string>
    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="show">The show: </string>
    <string name="species">Species: </string>
    <string name="map">Show Localization</string>
    <string name="shareAnimal">Share Animal</string>
    <string name="TextType">text/plain</string>
    <string name="AppType">pplication/image</string>
    <string name="animalApplication">Animal Aplication</string>
    <string name="lookThisAnimal">Look this animal: </string>
    <string name="SendInfo">Send info to ... </string>
    <string name="SendMail">Send mail to...</string>
    <string name="lookAtTheAnimal">Look at this %s that i\'m seeing!</string>
    <string name="RequestTitle">Camera and Storage Permissions</string>
    <string name="RequestDescription">The Permissions are required to take a Pic and share the animal</string>
    <string name="lowBattery">WARNING LOW BATTERY, please touch the battery image to see charging points</string>
    <string name="aviableBays">Aviable bays:</string>
    <string name="alredyadded">this even has alredy been added in the calendar</string>
    <string name="eventadded">Event added in the calendar</string>
    <string name="zooshow">Show in the Animal Reserve </string>
    <string name="timezone">America/Los_Angeles</string>
    <string name="logevent">event Created, the event id is:</string>
    <string name="logcalendar">Calendar ID: %s    Display Name: %s  Account Name: %s  Owner Name: %s</string>
    <string name="yes">yes</string>  
    <string name="no">no</string>
    <string name="nocalendarfound">No calendar Found</string>
    <string name="zoo">zoo - animals</string>
    <string name="zooinfo">zoo - animal information</string>
    <string name="zooSettings">zoo - settings</string>
    <string name="zooChargePoint">zoo - Charge Points</string>
    <string name="delete">Delete</string>
    <string name="sharingAnimal">Compartiendo animal</string>
    <string name="deletedAnimal">Deleting Animal</string>
    <string name="zooinfogoback">zooinfogoback</string>
    <string name="confirmMail">if its affirmative, please enter an email</string>
    <string name="wantToMail">Do you want to send an Email?</string>
    <string name="examplemail">example@example.com</string>
    <string name="pleaseentervalidmail">please enter a valid mail</string>
    <string name="showStart">the view of %s it is about to begin</string>
    <string name="lookbeautiful">look at this beautiful animal</string>
</resources>

